new match insert integration
new match insert integration

--- a/app/views/newTournamentReg.ejs
+++ b/app/views/newTournamentReg.ejs
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">End Date:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">End Date:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <input format="mm-dd-yyyy" id="tournamentEnd" name="tournamentEnd" type="date" class="input-xlarge form-control"/>
                     </div>
