--- a/app/views/playerRegistration.ejs
+++ b/app/views/playerRegistration.ejs
@@ -136,7 +136,7 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <!-- <textarea required class="form-control input-xlarg team-names" name="" id=""></textarea> -->
 
-                        <select name="playerTeams" id="playerTeams" class="selectpicker" multiple data-live-search="true" required>
+                        <select name="playerTeams" id="playerTeams" class="selectpicker" multiple data-live-search="true">
                             <% for(var i=0; i<teamsList[0].length; i++) {%>
                                <%if (teamsList[0][i].team_code.length > 0) { %>
                                     <option value=<%= teamsList[0][i].team_code %>><%= teamsList[0][i].team_name %></option>
@@ -149,11 +149,11 @@
 
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <div class="input-group">
                           <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="playerImage" required>
+                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="playerImage" >
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                           </div>
                         </div>
@@ -161,9 +161,9 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                         <input required format="mm-dd-yyyy" id="" name="playerDOB" type="date" class="input-xlarge form-control" />
+                         <input format="mm-dd-yyyy" id="" name="playerDOB" type="date" class="input-xlarge form-control" />
                     </div>
                 </div>
 
