--- a/app/views/newTeam.ejs
+++ b/app/views/newTeam.ejs
@@ -34,7 +34,7 @@
 
 <div class="container">
     <div class="row">
-         <form class="form-horizontal action-form newteam" id="newTeamDetails" action="newTeamData" method="post" novalidate>
+         <form class="form-horizontal action-form newteam" id="newTeamDetails" action="newTeamData" method="post">
 
             <fieldset class="form-content">
                 <!-- Address form -->
