--- a/app/views/updatePlayer.ejs
+++ b/app/views/updatePlayer.ejs
@@ -146,11 +146,11 @@
 
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <div class="input-group">
                           <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="playerImage" required>
+                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="playerImage" >
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                           </div>
                         </div>
@@ -158,9 +158,9 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                         <input required format="mm-dd-yyyy" id="playerDOB" name="playerDOB" type="date" class="input-xlarge form-control" />
+                         <input format="mm-dd-yyyy" id="playerDOB" name="playerDOB" type="date" class="input-xlarge form-control" />
                     </div>
                 </div>
 
