--- a/public/scss/style2.scss
+++ b/public/scss/style2.scss
@@ -288,3 +288,9 @@ $error-color: #dc3545;
             display: none;
             color: $error-color;
         }
+
+        .team1-section, .team2-section {
+            max-height: 250px;
+            scroll-behavior: smooth;
+            overflow-y: scroll;
+        }
