new match update and insert integration
new match update and insert integration

--- a/app/views/updateDetails.ejs
+++ b/app/views/updateDetails.ejs
@@ -53,8 +53,10 @@
 
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <img src="/images/001-cricket.svg"/>
-            <h6>Update Match Details</h6>
+            <a href="/updateMatch">
+              <img src="/images/001-cricket.svg"/>
+              <h6>Update Match Details</h6>
+            </a>
         </div>
     </div>
 </div>
