--- a/public/scss/style2.scss
+++ b/public/scss/style2.scss
@@ -294,3 +294,8 @@ $error-color: #dc3545;
             scroll-behavior: smooth;
             overflow-y: scroll;
         }
+
+        .update-selection {
+            width: 75%;
+            margin: 0 auto;
+        }
