--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -34,7 +34,7 @@
 
 <div class="container newmatch-section">
     <div class="row">
-         <form class="form-horizontal form-content" action="addMatchDetails" method="POST" id="addMatchDetails">
+         <form class="form-horizontal form-content" action="addMatchDetails" method="POST" id="addMatchDetails" onsubmit="return createJson();">
 
                 <input type="hidden" name="playersDetails" id="playersDetails" value="" />
          
@@ -114,7 +114,7 @@
                         </div>
 
                         <div class="row">
-                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Stadium Country:<span class="mandatory-field">*</span></label>
+                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Country:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                                 <select required id="stadiumCountry" name="stadiumCountry" class="input-xlarge form-control">
                                     <option value="">--Select--</option>
@@ -206,7 +206,7 @@
                 </div>
 
                 <div class="row">
-                    <input class="submitButton" onclick="createJson();" type="submit" name="" id="submitMatch" value="Submit">
+                    <input class="submitButton" type="submit" name="" id="submitMatch" value="Submit" >
                 </div>
         </form>
     </div>
