--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -60,7 +60,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 1:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="teamOne" name="teamOne" class="input-xlarge form-control" onchange="fetchPlayer('one',this.value);">
+                                <select required id="teamOne" name="teamOne" class="input-xlarge form-control" onchange="fetchPlayer('one',this.value, false, '');">
                                     <option value="">--Select--</option>
                                     
                                 </select>
@@ -70,7 +70,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 2:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="teamtwo" name="teamtwo" class="input-xlarge form-control" onchange="fetchPlayer('two',this.value);">
+                                <select required id="teamtwo" name="teamtwo" class="input-xlarge form-control" onchange="fetchPlayer('two',this.value, false, '');">
                                     <option value="">--Select--</option>
                                     
                                 </select>
