--- a/app/views/updateMatch.ejs
+++ b/app/views/updateMatch.ejs
@@ -34,7 +34,7 @@
 
 <div class="container newmatch-section">
     <div class="row">
-         <form class="form-horizontal form-content" action="addMatchDetails" method="POST" id="addMatchDetails">
+         <form class="form-horizontal form-content" action="updateMatchDetails" method="POST" id="updateMatchDetails" onsubmit="return createJson();">
 
                 <input type="hidden" name="playersDetails" id="playersDetails" value="" />
          
@@ -44,7 +44,7 @@
                     <div class="row">
                         <label class="col-lg-5 col-md-5 col-sm-12 col-xs-12" style="text-align: right">Select A Tournament:<span class="mandatory-field">*</span></label>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                            <select required id="tournamentName" name="tournamentName" class="input-xlarge form-control" onchange="selectMatchDetails(this.value);selectTeams(this.value);">
+                            <select required id="tournamentName" name="" class="input-xlarge form-control" onchange="selectMatchDetails(this.value);selectTeams(this.value);">
                                 <option value="">--Select--</option>
                                 <% for(var i=0; i<tournamentList[0].length; i++) {%>
                                    <%if (tournamentList[0][i].tournament_name.length > 0) { %>
@@ -73,7 +73,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 1:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="teamOne" name="teamOne" class="input-xlarge form-control" onchange="fetchPlayer('one',this.value);">
+                                <select required id="teamOne" name="teamOne" class="input-xlarge form-control" onchange="fetchPlayer('one',this.value, false, '');">
                                     <option value="">--Select--</option>
                                     
                                 </select>
@@ -83,7 +83,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 2:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="teamtwo" name="teamtwo" class="input-xlarge form-control" onchange="fetchPlayer('two',this.value);">
+                                <select required id="teamtwo" name="teamtwo" class="input-xlarge form-control" onchange="fetchPlayer('two',this.value, false, '');">
                                     <option value="">--Select--</option>
                                     
                                 </select>
@@ -219,7 +219,7 @@
                 </div>
 
                 <div class="row">
-                    <input class="submitButton" onclick="createJson();" type="submit" name="" id="submitMatch" value="Submit">
+                    <input class="submitButton" type="submit" name="" id="submitMatch" value="Update" >
                 </div>
         </form>
     </div>
