--- a/app/views/updateMatch.ejs
+++ b/app/views/updateMatch.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>New Match Registration</title>
+    <title>Update Match Registration</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
           <link rel="stylesheet" type="text/css" href="/css/style2.css" />
