Access control changes
Access control changes

--- a/app/views/newTeam.ejs
+++ b/app/views/newTeam.ejs
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="row">
-                    <input class="submitButton" type="submit" name="" id="" value="Submit" />
+                    <input class="submitButton" type="submit" name="" id="" value="Submit" onclick="checkErrorCodes();"/>
                 </div>
 
             </fieldset>
