--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
+
     <title>Manage Users</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+
           <link rel="stylesheet" type="text/css" href="/css/style2.css" />
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
           <link rel="icon" href="/images/001-shutter.png">
 
+          <script type="text/javascript">
+            
+            $('select').selectpicker();
+          </script>
 </head>
 <body>
 
@@ -32,6 +39,11 @@
     </div>
 
 <div class="container access-control">
+    <div class="add-user-section col-lg-2 col-md-2 col-sm-3 col-xs-3 ">
+      <a href="/newSignup">
+        <button type="button" class="btn add-user-button">Add User</button>
+      </a>
+    </div>
     <table class="table">
         <thead>
           <tr>
@@ -47,10 +59,11 @@
             <td>1</td>
             <td>sriram_s</td>
             <td>
-                <select required id="" name="" class="input-xlarge form-control">
-                    <option>IND vs WI - 2018</option>
-                    <option>IND vs ENG - 2018</option>
+                <select name="accesstournaments" id="accesstournaments" class="selectpicker" multiple data-live-search="true">
+                    <option value="tournament1">IND vs WI - 2018</option>
+                    <option value="tournament2">IND vs ENG - 2018</option>            
                 </select>
+                
             </td>
             <td>
                 <div>
