--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -20,46 +20,46 @@
 
         <!-- Top content -->
         <div class="top-content">
-        	
+            
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 form-box">
-                        	<div class="form-top">
-                        		<div class="form-top-left">
-                        			<h1 class="logo-name">Sports Lens</h1>
+                            <div class="form-top">
+                                <div class="form-top-left">
+                                    <h1 class="logo-name">Sports Lens</h1>
 
                                     <% if (serverMsg == "invalid") { %>
                                         <div class="error-block">Invalid Username or Password</div>
                                     <% } %>
                                         
-                        		</div>
-                        		<div class="form-top-right">
+                                </div>
+                                <div class="form-top-right">
                                     <img src="/images/001-shutter.png">
-                        		</div>
+                                </div>
                             </div>
 
                             <div class="form-bottom">        
-			
+            
                                 <form role="form" action="/signup" role="form" method="post" class="login-form">
            
-                   		         <div class="form-group" >
-                				    <label for="email"  class="sr-only">Email</label>
+                                 <div class="form-group" >
+                                    <label for="email"  class="sr-only">UserName</label>
 
-                				    <input type="text" name="email" id="email" class="form-control  form-username"  required placeholder="Email" />
-                				
-                			     </div>
+                                    <input type="text" name="username" id="username" class="form-control  form-username"  required placeholder="UserName" />
+                                
+                                 </div>
            
-                    			<div class="form-group" >
-                    				<label for="password"  class="sr-only">Password</label> 
+                                <div class="form-group" >
+                                    <label for="password"  class="sr-only">Password</label> 
 
-                    				<input type="password" name="password" id="password" class="form-control  form-username" ng-model="user.password" required  placeholder="Password"/>
-                    			    
-                    			</div>
+                                    <input type="password" name="password" id="password" class="form-control  form-username" ng-model="user.password" required  placeholder="Password"/>
+                                    
+                                </div>
 
-			                     <button type="submit" class="btn btn-info">Log In</button>
-			                   </form>
-
-		                    </div>
+                                 <button type="submit" class="btn btn-info">Log In</button>
+                               </form>
+                                   
+                            </div>
                         </div>
                     </div>
                 </div>
