--- a/public/scss/style2.scss
+++ b/public/scss/style2.scss
@@ -299,3 +299,33 @@ $error-color: #dc3545;
             width: 75%;
             margin: 0 auto;
         }
+
+        .add-user-section {
+            float: right;
+            padding: 0;
+        }
+
+        .add-user-button {
+            float: right;
+            margin-bottom: 10px;
+            padding: 6px;
+            font-size: 13px;
+            color: #fff;
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        .error-block {
+            font-weight: bold;
+            color: #EB172D;
+        }
+
+        .error-email, .error-contact, .error-uname {
+            display: none;
+            color: $error-color;
+        }
+
+        .error-input, .error-input-name {
+          border: 1px solid red;
+          box-shadow: 0px 0px 5px red inset; 
+        }
