--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -33,7 +33,7 @@
           <img src="/images/002-user.svg"/>
           <div>
             <p>Welcome, Admin</p>
-            <p><a>Settings</a><a>Log Out</a></p>
+            <p><a>Log Out</a></p>
           </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
                         </label> <br />
                     </div>
 
-                    <input class="submitButton" type="button" name="" id="" value="OK">
+                    <input class="submitButton" type="button" name="" id="" value="Save">
                     <input class="submitButton" type="button" name="" id="" value="Reset">
 
                     
