--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,5 +202,9 @@ img {
   font-weight: bold; }
 
 .body-background {
-  background-image: url("/images/login_bg.png");
-  background-position: top; }
+  background-image: url("/images/app_bg.jpg");
+  background-size: 100%; }
+
+body {
+  background-image: url("/images/app_bg.jpg");
+  background-size: 100%; }
