--- a/app/views/reportScreen.ejs
+++ b/app/views/reportScreen.ejs
@@ -26,7 +26,7 @@
           <img src="/images/002-user.svg"/>
           <div>
             <p>Welcome, Admin</p>
-            <p><a>Settings</a><a>Log Out</a></p>
+            <p><a>Log Out</a></p>
           </div>
         </div>
     </div>
